; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/bnxt_re/extr_main.c_bnxt_re_cleanup_res.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/bnxt_re/extr_main.c_bnxt_re_cleanup_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt_re_dev = type { i32, %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnxt_re_dev*)* @bnxt_re_cleanup_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnxt_re_cleanup_res(%struct.bnxt_re_dev* %0) #0 {
  %2 = alloca %struct.bnxt_re_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.bnxt_re_dev* %0, %struct.bnxt_re_dev** %2, align 8
  store i32 1, i32* %3, align 4
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %7 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %4
  %11 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %12 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %11, i32 0, i32 2
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sub nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %13, i64 %16
  %18 = call i32 @bnxt_qplib_disable_nq(i32* %17)
  br label %19

19:                                               ; preds = %10
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %4

22:                                               ; preds = %4
  %23 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %24 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %22
  %29 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %30 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %29, i32 0, i32 1
  %31 = call i32 @bnxt_qplib_cleanup_res(%struct.TYPE_2__* %30)
  br label %32

32:                                               ; preds = %28, %22
  ret void
}

declare dso_local i32 @bnxt_qplib_disable_nq(i32*) #1

declare dso_local i32 @bnxt_qplib_cleanup_res(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
